// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldToggleSwitch 1`] = `
.c6 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c5 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #C1C6CC;
}

.c5:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(79,42,186,0.5);
}

.c4 {
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.c3 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c3 input {
  cursor: pointer;
}

.c3 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c7 {
  width: 100%;
}

.c0 .c8 {
  width: 100%;
}

.c0 .c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-right: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className=""
  >
    <div
      className="c3 "
    >
      <input
        className="c4"
        id="thumbs-up"
        name="thumbsUp"
        role="switch"
        type="checkbox"
      />
      <div
        className="c5"
      >
        <div
          className="c6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldToggleSwitch turned on 1`] = `
.c6 {
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c5 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #9785F2;
}

.c5:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(79,42,186,0.5);
}

.c4 {
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.c3 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c3 input {
  cursor: pointer;
}

.c3 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c7 {
  width: 100%;
}

.c0 .c8 {
  width: 100%;
}

.c0 .c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-right: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className=""
  >
    <div
      className="c3 "
    >
      <input
        aria-checked={true}
        checked={true}
        className="c4"
        id="thumbs-up"
        name="thumbsUp"
        role="switch"
        type="checkbox"
      />
      <div
        className="c5"
      >
        <div
          className="c6"
        />
      </div>
    </div>
  </div>
</div>
`;
